Fixed hidden sections elements

--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>Mi Portafolio</title>
 </head>
 <body>
-    <div class="container">
+    <div id="container">
+        <section id="presentation">
+            <h1>DIEGO RODRIGUEZ</h1>
+            <h3>SOFTWARE DEVELOPER</h3>
+            <div id="welcomeButton">
+                <button class="button-53" role="button">Wellcome</button>
+            </div>
+        </section>
+
         <div class="sections-container">
             <!-- Sección 1 -->
             <section class="hidden" id="section1">
@@ -21,13 +29,6 @@
             </section>
         </div>
         <!-- Presentation section -->
-        <div id="presentation-container">
-            <section id="presentation">
-                <h1>DIEGO RODRIGUEZ</h1>
-                <h3>SOFTWARE DEVELOPER</h3>
-                <button class="button-53" role="button">Wellcome</button>
-            </section>
-        </div>
         <div class="sections-container">
             <!-- Sección 3 -->
             <section class="hidden" id="section3">
