--- a/index.html
+++ b/index.html
@@ -1,47 +1,51 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Mi Portafolio</title>
-</head>
-<body>
-    <div id="container">
-        <section id="presentation">
-            <h1>DIEGO RODRIGUEZ</h1>
-            <h3>SOFTWARE DEVELOPER</h3>
-            <div id="welcomeButton">
-                <button class="button-53" role="button">Wellcome</button>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="styles.css">
+        <title>Mi Portafolio</title>
+    </head>
+    <body>
+        <div class="container">
+            <div id="header">
+                <h1>DIEGO RODRIGUEZ</h1>
+                <h3>SOFTWARE DEVELOPER</h3>
+                <div id="welcomeButton"> <button class="button-53" role="button">Wellcome</button> </div>
             </div>
-        </section>
-
-        <div class="sections-container">
-            <!-- Sección 1 -->
-            <section class="hidden" id="section1">
-                <h2>Sección 1</h2>
-                <p>Contenido de la sección 1.</p>
-            </section>
-            <!-- Sección 2 -->
-            <section class="hidden" id="section2">
-                <h2>Sección 2</h2>
-                <p>Contenido de la sección 2.</p>
-            </section>
+            <div id="main">
+                <!-- Sección 1 -->
+                <section class="hidden" id="section1">
+                    <h2>Sección 1</h2>
+                    <p>Contenido de la sección 1.</p>
+                </section>
+                <!-- Sección 2 -->
+                <section class="hidden" id="section2">
+                    <h2>Sección 2</h2>
+                    <p>Contenido de la sección 2.</p>
+                </section>
+                <!-- Sección 3 -->
+                <section class="hidden" id="section3">
+                    <h2>Sección 3</h2>
+                    <p>Contenido de la sección 3.</p>
+                </section>
+                <!-- Sección 4 -->
+                <section class="hidden" id="section4">
+                    <h2>Sección 4</h2>
+                    <p>Contenido de la sección 4.</p>
+                </section>
+                <!-- Sección 1 -->
+                <section class="hidden" id="section1">
+                    <h2>Sección 1</h2>
+                    <p>Contenido de la sección 1.</p>
+                </section>
+                <!-- Sección 1 -->
+                <section class="hidden" id="section1">
+                    <h2>Sección 1</h2>
+                    <p>Contenido de la sección 1.</p>
+                </section>
+            </div>
         </div>
-        <!-- Presentation section -->
-        <div class="sections-container">
-            <!-- Sección 3 -->
-            <section class="hidden" id="section3">
-                <h2>Sección 3</h2>
-                <p>Contenido de la sección 3.</p>
-            </section>
-            <!-- Sección 4 -->
-            <section class="hidden" id="section4">
-                <h2>Sección 4</h2>
-                <p>Contenido de la sección 4.</p>
-            </section>
-        </div>
-    </div>
-    <script src="script.js"></script>
-</body>
+        <script src="script.js"></script>
+    </body>
 </html>
