--- a/index.html
+++ b/index.html
@@ -14,35 +14,37 @@
                 <div id="welcomeButton"> <button class="button-53" role="button">Wellcome</button> </div>
             </div>
             <div id="main">
-                <!-- Sección 1 -->
-                <section class="hidden" id="section1">
-                    <h2>Sección 1</h2>
-                    <p>Contenido de la sección 1.</p>
+                <section class="hidden" id="aboutme">
+                    <h2>About me</h2>
+                    <p>Test comment</p>
                 </section>
-                <!-- Sección 2 -->
-                <section class="hidden" id="section2">
-                    <h2>Sección 2</h2>
-                    <p>Contenido de la sección 2.</p>
+                <section class="hidden" id="workexperience">
+                    <h2>Work experience </h2>
+                    <p>Test comment</p>
                 </section>
-                <!-- Sección 3 -->
-                <section class="hidden" id="section3">
-                    <h2>Sección 3</h2>
-                    <p>Contenido de la sección 3.</p>
+                <section class="hidden" id="projects">
+                    <h2>Projects</h2>
+                    <p>Test comment</p>
                 </section>
-                <!-- Sección 4 -->
-                <section class="hidden" id="section4">
-                    <h2>Sección 4</h2>
-                    <p>Contenido de la sección 4.</p>
+                <section class="hidden" id="skills">
+                    <h2>Skills</h2>
+                    <p>Test comment</p>
                 </section>
-                <!-- Sección 1 -->
-                <section class="hidden" id="section5">
-                    <h2>Sección 5</h2>
-                    <p>Contenido de la sección 5.</p>
+                <section class="hidden" id="education">
+                    <h2>Education</h2>
+                    <p>Test comment</p>
                 </section>
-                <!-- Sección 1 -->
-                <section class="hidden" id="section6">
-                    <h2>Sección 6</h2>
-                    <p>Contenido de la sección 6.</p>
+                <section class="hidden" id="certifications">
+                    <h2>Certifications</h2>
+                    <p>Test comment</p>
+                </section>
+                <section class="hidden" id="briefcase">
+                    <h2>Briefcase</h2>
+                    <p>...</p>
+                </section>
+                <section class="hidden" id="contact">
+                    <h2>Contact</h2>
+                    <p>...</p>
                 </section>
             </div>
         </div>
