--- a/index.html
+++ b/index.html
@@ -1,53 +1,77 @@
 <!DOCTYPE html>
+
 <html lang="es">
+
     <head>
+
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <link rel="stylesheet" href="styles.css">
+
         <title>Mi Portafolio</title>
+
     </head>
+
     <body>
+
         <div class="container">
+
             <div id="header">
                 <h1>DIEGO RODRIGUEZ</h1>
                 <h3>SOFTWARE DEVELOPER</h3>
                 <div id="welcomeButton"> <button class="button-53" role="button">Wellcome</button> </div>
             </div>
+
             <div id="main">
+
                 <section class="hidden" id="aboutme">
                     <h2>About me</h2>
                     <p>Test comment</p>
                 </section>
+
                 <section class="hidden" id="workexperience">
                     <h2>Work experience </h2>
                     <p>Test comment</p>
                 </section>
+
                 <section class="hidden" id="projects">
                     <h2>Projects</h2>
                     <p>Test comment</p>
                 </section>
+
                 <section class="hidden" id="skills">
                     <h2>Skills</h2>
                     <p>Test comment</p>
                 </section>
+
                 <section class="hidden" id="education">
                     <h2>Education</h2>
                     <p>Test comment</p>
                 </section>
+
                 <section class="hidden" id="certifications">
                     <h2>Certifications</h2>
                     <p>Test comment</p>
                 </section>
+
                 <section class="hidden" id="briefcase">
                     <h2>Briefcase</h2>
-                    <p>...</p>
+                    <p>Test comment</p>
                 </section>
+
                 <section class="hidden" id="contact">
                     <h2>Contact</h2>
-                    <p>...</p>
+                    <p>Test comment</p>
+
                 </section>
+
             </div>
+
         </div>
+
         <script src="script.js"></script>
+
     </body>
+
 </html>
