Add nav to html and css files and update event listener in script.js

--- a/index.html
+++ b/index.html
@@ -23,6 +23,26 @@
                 <div id="welcomeButton"> <button class="button-53" role="button">Wellcome</button> </div>
             </div>
 
+            <div id="navigation">
+
+                <nav>
+
+                    <ul>
+
+                        <li class="hidden"><a href="#aboutme ">About me</a></li>
+                        <li class="hidden"><a href="#workexperience ">Work experience</a></li>
+                        <li class="hidden"><a href="#projects ">Projects</a></li>
+                        <li class="hidden"><a href="#skills ">Skills</a></li>
+                        <li class="hidden"><a href="#education ">Education</a></li>
+                        <li class="hidden"><a href="#certifications ">Certifications</a></li>
+                        <li class="hidden"><a href="#contact ">Contact</a></li>
+
+                    </ul>
+                </nav>
+
+
+            </div>
+
             <div id="main">
 
                 <section class="hidden" id="aboutme">
@@ -52,11 +72,6 @@
 
                 <section class="hidden" id="certifications">
                     <h2>Certifications</h2>
-                    <p>Test comment</p>
-                </section>
-
-                <section class="hidden" id="briefcase">
-                    <h2>Briefcase</h2>
                     <p>Test comment</p>
                 </section>
 
