--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
 <html lang="es">
 
+    <!-- Head -->
+
     <head>
 
         <meta charset="UTF-8">
@@ -13,15 +15,26 @@
 
     </head>
 
+    <!-- Body -->
+
     <body>
+
+        <!-- Container -->
 
         <div class="container">
 
+            <!-- Header -->
+
             <div id="header">
+
                 <h1>DIEGO RODRIGUEZ</h1>
                 <h3>SOFTWARE DEVELOPER</h3>
+
                 <div id="welcomeButton"> <button class="button-53" role="button">Wellcome</button> </div>
+
             </div>
+
+            <!-- Nav -->
 
             <div id="navigation">
 
@@ -38,44 +51,59 @@
                         <li class="hidden"><a href="#contact ">Contact</a></li>
 
                     </ul>
+
                 </nav>
 
-
             </div>
+
+            <!-- Main with sections --> 
 
             <div id="main">
 
                 <section class="hidden" id="aboutme">
+
                     <h2>About me</h2>
                     <p>Test comment</p>
+
                 </section>
 
                 <section class="hidden" id="workexperience">
+
                     <h2>Work experience </h2>
                     <p>Test comment</p>
+
                 </section>
 
                 <section class="hidden" id="projects">
+
                     <h2>Projects</h2>
                     <p>Test comment</p>
+
                 </section>
 
                 <section class="hidden" id="skills">
+
                     <h2>Skills</h2>
                     <p>Test comment</p>
+
                 </section>
 
                 <section class="hidden" id="education">
+
                     <h2>Education</h2>
                     <p>Test comment</p>
+
                 </section>
 
                 <section class="hidden" id="certifications">
+
                     <h2>Certifications</h2>
                     <p>Test comment</p>
+
                 </section>
 
                 <section class="hidden" id="contact">
+
                     <h2>Contact</h2>
                     <p>Test comment</p>
 
@@ -84,6 +112,12 @@
             </div>
 
         </div>
+
+        <!-- Footer -->
+
+        <footer></footer>
+
+        <!-- Script -->
 
         <script src="script.js"></script>
 
