--- a/index.html
+++ b/index.html
@@ -2,122 +2,113 @@
 
 <html lang="es">
 
-    <!-- Head -->
-
     <head>
 
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="styles.css" />
 
-        <title>Mi Portafolio</title>
+        <title>Briefcase</title>
 
     </head>
 
-    <!-- Body -->
-
     <body>
-
-        <!-- Container -->
 
         <div class="container">
 
-            <!-- Header -->
-
             <div id="header">
 
-                <h1>DIEGO RODRIGUEZ</h1>
-                <h3>SOFTWARE DEVELOPER</h3>
+            <h1>DIEGO RODRIGUEZ</h1>
+            <h3>SOFTWARE DEVELOPER</h3>
 
-                <div id="welcomeButton"> <button class="button-53" role="button">Wellcome</button> </div>
+            <div id="welcomeButton"> <button class="button-53" role="button"> Wellcome </button> </div>
 
             </div>
-
-            <!-- Nav -->
 
             <div id="navigation">
 
-                <nav>
+            <nav>
 
-                    <ul>
+                <ul>
 
-                        <li class="hidden"><a href="#aboutme ">About me</a></li>
-                        <li class="hidden"><a href="#workexperience ">Work experience</a></li>
-                        <li class="hidden"><a href="#projects ">Projects</a></li>
-                        <li class="hidden"><a href="#skills ">Skills</a></li>
-                        <li class="hidden"><a href="#education ">Education</a></li>
-                        <li class="hidden"><a href="#certifications ">Certifications</a></li>
-                        <li class="hidden"><a href="#contact ">Contact</a></li>
+                <li><a href="#aboutme">About me</a></li>
+                <li><a href="#workexperience">Work experience</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#certifications">Certifications</a></li>
+                <li><a href="#contact">Contact</a></li>
 
-                    </ul>
+                </ul>
 
-                </nav>
+            </nav>
 
             </div>
 
-            <!-- Main with sections --> 
-
             <div id="main">
 
-                <section class="hidden" id="aboutme">
+            <section class="hidden hoverable" id="aboutme">
 
-                    <h2>About me</h2>
-                    <p>Test comment</p>
+                <h2>¿Qué es Lorem Ipsum?</h2>
 
-                </section>
+                <p>Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</p>
+                
+            </section>
 
-                <section class="hidden" id="workexperience">
+            <section class="hidden hoverable" id="workexperience">
 
-                    <h2>Work experience </h2>
-                    <p>Test comment</p>
+                <h2>¿Por qué lo usamos?</h2>
 
-                </section>
+                <p>Es un hecho establecido hace demasiado tiempo que un lector se distraerá con el contenido del texto de un sitio mientras que mira su diseño. El punto de usar Lorem Ipsum es que tiene una distribución más o menos normal de las letras, al contrario de usar textos como por ejemplo "Contenido aquí, contenido aquí". Estos textos hacen parecerlo un español que se puede leer. Muchos paquetes de autoedición y editores de páginas web usan el Lorem Ipsum como su texto por defecto, y al hacer una búsqueda de "Lorem Ipsum" va a dar por resultado muchos sitios web que usan este texto si se encuentran en estado de desarrollo. Muchas versiones han evolucionado a través de los años, algunas veces por accidente, otras veces a propósito (por ejemplo insertándole humor y cosas por el estilo).</p>
+                
+            </section>
 
-                <section class="hidden" id="projects">
+            <section class="hidden hoverable" id="projects">
 
-                    <h2>Projects</h2>
-                    <p>Test comment</p>
+                <h2>¿De dónde viene?</h2>
 
-                </section>
+                <p>Al contrario del pensamiento popular, el texto de Lorem Ipsum no es simplemente texto aleatorio. Tiene sus raices en una pieza cl´sica de la literatura del Latin, que data del año 45 antes de Cristo, haciendo que este adquiera mas de 2000 años de antiguedad. Richard McClintock, un profesor de Latin de la Universidad de Hampden-Sydney en Virginia, encontró una de las palabras más oscuras de la lengua del latín, "consecteur", en un pasaje de Lorem Ipsum, y al seguir leyendo distintos textos del latín, descubrió la fuente indudable. Lorem Ipsum viene de las secciones 1.10.32 y 1.10.33 de "de Finnibus Bonorum et Malorum" (Los Extremos del Bien y El Mal) por Cicero, escrito en el año 45 antes de Cristo. Este libro es un tratado de teoría de éticas, muy popular durante el Renacimiento. La primera linea del Lorem Ipsum, "Lorem ipsum dolor sit amet..", viene de una linea en la sección 1.10.32. El trozo de texto estándar de Lorem Ipsum usado desde el año 1500 es reproducido debajo para aquellos interesados. Las secciones 1.10.32 y 1.10.33 de "de Finibus Bonorum et Malorum" por Cicero son también reproducidas en su forma original exacta, acompañadas por versiones en Inglés de la traducción realizada en 1914 por H. Rackham.</p>
 
-                <section class="hidden" id="skills">
+            </section>
 
-                    <h2>Skills</h2>
-                    <p>Test comment</p>
+            <section class="hidden hoverable" id="skills">
 
-                </section>
+                <h2>¿Dónde puedo conseguirlo?</h2>
 
-                <section class="hidden" id="education">
+                <p>Hay muchas variaciones de los pasajes de Lorem Ipsum disponibles, pero la mayoría sufrió alteraciones en alguna manera, ya sea porque se le agregó humor, o palabras aleatorias que no parecen ni un poco creíbles. Si vas a utilizar un pasaje de Lorem Ipsum, necesitás estar seguro de que no hay nada avergonzante escondido en el medio del texto. Todos los generadores de Lorem Ipsum que se encuentran en Internet tienden a repetir trozos predefinidos cuando sea necesario, haciendo a este el único generador verdadero (válido) en la Internet. Usa un diccionario de mas de 200 palabras provenientes del latín, combinadas con estructuras muy útiles de sentencias, para generar texto de Lorem Ipsum que parezca razonable. Este Lorem Ipsum generado siempre estará libre de repeticiones, humor agregado o palabras no características del lenguaje, etc.</p>
 
-                    <h2>Education</h2>
-                    <p>Test comment</p>
+            </section>
 
-                </section>
+            <section class="hidden hoverable" id="education">
 
-                <section class="hidden" id="certifications">
+                <h2>Lorem Ipsum</h2>
 
-                    <h2>Certifications</h2>
-                    <p>Test comment</p>
+                <p>Etiam gravida erat a dui rhoncus porta. Sed risus libero, feugiat in ante non, mollis lobortis sem. Pellentesque dictum dui a lacinia tempus. Curabitur bibendum semper neque eget pretium. Curabitur eu massa feugiat, finibus purus quis, commodo diam. Pellentesque rutrum blandit ex tempus vulputate. Suspendisse a volutpat mi. Nam euismod, ipsum non convallis dictum, orci nunc blandit leo, sed elementum quam sem a lacus. Quisque dictum mi in feugiat sodales. Suspendisse potenti. Nulla pharetra ex vitae magna rutrum, mattis blandit nibh rhoncus. Sed ex nisl, laoreet sit amet ornare consequat, iaculis in ante. Vivamus felis metus, eleifend ac venenatis quis, molestie vitae turpis. Suspendisse varius bibendum nunc, id feugiat magna. Nulla dignissim elementum efficitur.</p>
 
-                </section>
+            </section>
 
-                <section class="hidden" id="contact">
+            <section class="hidden hoverable" id="certifications">
 
-                    <h2>Contact</h2>
-                    <p>Test comment</p>
+                <h2>Neque porro quisquam est qui dolorem ipsum quia dolor.</h2>
 
-                </section>
+                <p>Aenean aliquam nibh lobortis lectus hendrerit, vel malesuada tortor tincidunt. Curabitur fringilla lacus dolor, sed egestas metus cursus eget. Nulla ullamcorper lacus sit amet est imperdiet, in scelerisque sapien dictum. Praesent tincidunt, orci vitae bibendum eleifend, purus eros dapibus metus, vel tincidunt sem lacus sed quam. Sed elit nisl, tempus in condimentum nec, venenatis in risus. Praesent rhoncus arcu dolor, commodo suscipit risus tincidunt at. Ut at nibh imperdiet, condimentum ipsum sit amet, tempor neque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nulla lacinia, dui ut vulputate luctus, lectus lectus placerat enim, non interdum dui lorem eget ipsum.</p>
+
+            </section>
+
+            <section class="hidden hoverable" id="contact">
+
+                <h2>sit amet, consectetur, adipisci velit...</h2>
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur nec ante vel eros sagittis faucibus eu eget eros. Nulla et quam sed est efficitur faucibus ut ornare orci. Donec nulla neque, dignissim id iaculis condimentum, lacinia sed elit. Donec massa leo, viverra nec nisl quis, lobortis bibendum nunc. In vestibulum sapien non arcu rhoncus, eget congue odio finibus. Proin tincidunt, lacus congue pellentesque egestas, nulla odio molestie erat, in vulputate tellus lacus in nunc. Proin faucibus nisl et arcu suscipit sodales. Morbi nec nisi dictum, viverra erat nec, malesuada nulla. Nunc dictum ullamcorper orci vitae laoreet.</p>
+
+            </section>
 
             </div>
 
         </div>
 
-        <!-- Footer -->
-
         <footer></footer>
-
-        <!-- Script -->
 
         <script src="script.js"></script>
 
