Add photo bounce and links rotate css keyframes

--- a/index.html
+++ b/index.html
@@ -25,25 +25,23 @@
             <!-- Encabezado de la página -->
             <div id="header">
 
-                <h1 id="header-text-yellow">DIEGO RODRIGUEZ</h1>
-                <h1 id="header-text-light">SOFTWARE DEVELOPER</h1>
+                <div class="my-photo"></div>
+                <h1 id="header-text">DIEGO RODRIGUEZ</h1>
+            
 
             </div>
-
-            <!-- Contenedor del botón de bienvenida -->
-            <div id="button-container"> <button class="button-53" role="button"> Wellcome </button> </div>
 
             <!-- Barra de navegación -->
             <div id="navigation" >
 
-                <nav class="hidden">
+                <nav>
 
                     <ul>
 
-                        <li><a href="#summary">Summary</a></li>
-                        <li><a href="#technologies">Technologies</a></li>
-                        <li><a href="#projects">Projects</a></li>                       
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="#summary" class="nav-link">Summary</a></li>
+                        <li><a href="#projects" class="nav-link">Projects</a></li>    
+                        <li><a href="#technologies" class="nav-link">Technologies</a></li>                   
+                        <li><a href="#contact" class="nav-link">Contact</a></li>
 
                     </ul>
 
@@ -55,7 +53,7 @@
             <div id="main">
 
                 <!-- Resumen -->
-                <section class="hidden hoverable" id="summary">
+                <section class="hoverable" id="summary">
 
                     <h2>Summary</h2>
 
@@ -64,7 +62,7 @@
                 </section>
 
                 <!-- Proyectos -->
-                <section class="hidden hoverable" id="projects">
+                <section class="hoverable" id="projects">
 
                     <h2>Projects</h2>
 
@@ -73,7 +71,7 @@
                 </section>
 
                 <!-- Tecnologías -->
-                <section class="hidden hoverable" id="technologies">
+                <section class="hoverable" id="technologies">
 
                     <h2>Technologies</h2>
 
@@ -94,7 +92,7 @@
                 </section>
 
                 <!-- Contacto -->
-                <section class="hidden hoverable" id="contact">
+                <section class="hoverable" id="contact">
 
                     <h2>Contact</h2>
 
