--- a/index.html
+++ b/index.html
@@ -37,26 +37,16 @@
                 
             </div>
 
-            <!-- 
-            Barra de navegación
+            <!-- Barra de navegación -->
 
-            <div id="navigation" >
-
-                <nav>
-
-                    <ul>
-
-                        <li><a href="#summary" class="nav-link">Summary</a></li>
-                        <li><a href="#projects" class="nav-link">Projects</a></li>    
-                        <li><a href="#technologies" class="nav-link">Technologies</a></li>                   
-                        <li><a href="#contact" class="nav-link">Contact</a></li>
-
-                    </ul>
-
-                </nav>
-
-            </div>
-            -->
+            <div id="navigation">
+                <ul>
+                  <li><a href="#section1" class="nav-link active">Summary</a></li>
+                  <li><a href="#section2" class="nav-link">Projects</a></li>
+                  <li><a href="#section3" class="nav-link">Technologies</a></li>
+                  <li><a href="#section4" class="nav-link">Contact</a></li>
+                </ul>
+              </div>
 
             <!-- Sección principal de la página -->
 
@@ -121,13 +111,6 @@
                     </div>
 
                 </section>
-
-                <div id="sections-nav-container">
-
-                    <button onclick="showPreviewSection()" style="display:none"><span class="arrow-prev"></span> </button>
-                    <button onclick="showNextSection()"><span class="arrow-next"></span></button>
-                    
-                </div>
 
             </div>
 
