add basic contact form and link

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
                     <div class="section2-subsection" id="item2">
 
-                        <h3>APPMAZING</h3>
+                        <h2>APPMAZING</h2>
 
                         <div class="technologies-img-container">
 
@@ -126,7 +126,7 @@
 
                     <div class="section2-subsection" id="item3">
 
-                        <h3>FUNDME</h3>
+                        <h2>FUNDME</h2>
 
                         <div class="technologies-img-container">
 
@@ -175,7 +175,7 @@
                     
                     <div class="section2-subsection" id="item5">
 
-                        <h3>TETRIS</h3>
+                        <h2>TETRIS</h2>
 
                         <div class="technologies-img-container">
 
@@ -185,7 +185,7 @@
 
                         <p></p>
 
-                        <div class="demo-img-container"> <img src="assets/img/empty.jpg"> </div>
+                        <div class="demo-img-container"> <img src="assets/img/tetris-tmp.jpg"> </div>
                         <div class="section2-subsection-nav-link">
                             <a href="https://github.com/drodriguez98/drb-tetris" target="_blank"><img src="assets/img/github.png" class="contact-link-img" alt="github"/></a>
                         </div>
@@ -194,7 +194,7 @@
 
                     <div class="section2-subsection" id="item6">
 
-                        <h3>SNAKE</h3>
+                        <h2>SNAKE</h2>
 
                         <div class="technologies-img-container">
 
@@ -211,7 +211,7 @@
 
                     <div class="section2-subsection" id="item7">
 
-                        <h3>SPACESHIP</h3>
+                        <h2>SPACESHIP</h2>
 
                         <div class="technologies-img-container">
 
@@ -248,7 +248,7 @@
 
                     <div class="section2-subsection" id="item9">
 
-                        <h3>TASKS</h3>
+                        <h2>TASKS</h2>
 
                         <div class="technologies-img-container">
 
@@ -269,7 +269,7 @@
 
                     <div class="section2-subsection" id="item10">
 
-                        <h3>GALLERY</h3>
+                        <h2>GALLERY</h2>
 
                         <div class="technologies-img-container"></div>
 
