--- a/index.html
+++ b/index.html
@@ -63,9 +63,7 @@
 
                     <p>Desarrollador con experiencia en una amplia gama de tecnologías. Desde bases de datos como SQL hasta lenguajes de programación como Python, PHP, y Java, incluyendo el desarrollo con Spring Boot. Además, tengo experiencia en herramientas de front-end como HTML5, CSS3, Javascript, y el Framework Angular.</p>
 
-                    <p>Mi formación incluye una licenciatura en Educación Infantil, un Ciclo de Grado Superior en Administración de Sistemas en Red y un Bootcamp de Programación. Estas experiencias me han proporcionado una perspectiva única y un conjunto diverso de habilidades que aplico en cada proyecto.</p>
-
-                    <p>A pesar de que mi carrera profesional está en sus primeras etapas, mi enfoque autodidacta y mi capacidad para adaptarme rápidamente a nuevas tecnologías me han permitido crear soluciones innovadoras y sólidas. Mis proyectos personales reflejan mi habilidad para desarrollar soluciones creativas y funcionales. He enfrentado desafíos diversos y he logrado soluciones efectivas que demuestran mi pasión y competencia como desarrollador.</p>
+                    <p>Mi formación incluye una licenciatura en Educación Infantil, un Ciclo de Grado Superior en Administración de Sistemas en Red y un Bootcamp de Programación. A pesar de que mi carrera profesional está en sus primeras etapas, mi enfoque autodidacta y mi capacidad para adaptarme rápidamente a nuevas tecnologías me han permitido crear soluciones innovadoras y sólidas. He enfrentado desafíos diversos y he logrado soluciones efectivas que demuestran mi pasión y competencia como desarrollador.</p>
 
                     <p>Mi objetivo es seguir creciendo como profesional, contribuir con mi experiencia y creatividad a proyectos desafiantes, y continuar aprendiendo y mejorando mis habilidades en el campo del desarrollo de software y/o web.</p>
                     
