Add section to download resume

--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
                     <p>Mi formación incluye un Grado de Educación Infantil, un Ciclo de Grado Superior en Administración de Sistemas en Red y un Bootcamp de Programación. A pesar de que mi carrera profesional está en sus primeras etapas, destaco también mi enfoque autodidacta y mi capacidad para adaptarme rápidamente a nuevas tecnologías.</p>
 
                     <p>Mi objetivo es contribuir con mi experiencia a proyectos desafiantes y continuar aprendiendo y mejorando mis habilidades en el campo del desarrollo de software y/o web.</p>
+
+                    <div class="download"> <a href="assets/curriculum.pdf" download="curriculum.pdf" target="_blank">Descargar Currículum</a> </div>
                     
                 </section>
 
