rename css and js selectors

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 
             <!-- Barra de navegación -->
 
-            <div class="contact-links-container">
+            <div id="contact-links">
                 <a href="#section3" target="_blank"><img src="assets/img/gmail.png" id="gmail-link" class="contact-link-img" alt="gmail"/></a>
                 <a href="https://es.linkedin.com/in/drodriguez98" target="_blank"><img src="assets/img/linkedin.png" class="contact-link-img" alt="linkedin"/></a>
                 <a href="https://github.com/drodriguez98" target="_blank"><img src="assets/img/github.png" class="contact-link-img" alt="github"/></a>
             </div>
 
-            <div id="navigation">
+            <div id="nav">
 
                 <ul>
 
@@ -54,7 +54,7 @@
 
                     <!-- <h2>Me</h2> -->
 
-                    <div id="photo-container">
+                    <div id="section1-img-container">
 
                         <!-- <h1 id="header-text">DIEGO RODRIGUEZ</h1> -->
                         <div class="my-photo"></div>
@@ -78,7 +78,7 @@
                     
                     <!-- Spring Boot & Angular projects subsection -->
 
-                    <div class="section2-subsection" id="item1">
+                    <div id="section2-subsection" id="item1">
 
                         <h2>SPRING BOOT & ANGULAR PROJECTS</h2>
 
@@ -96,7 +96,7 @@
 
                     </div>
 
-                    <div class="section2-subsection" id="item2">
+                    <div id="section2-subsection" id="item2">
 
                         <h2>APPMAZING</h2>
 
@@ -122,7 +122,7 @@
 
                     </div>
 
-                    <div class="section2-subsection" id="item3">
+                    <div id="section2-subsection" id="item3">
 
                         <h2>FUNDME</h2>
 
@@ -151,7 +151,7 @@
 
                     </div>
 
-                    <div class="section2-subsection" id="item4">
+                    <div id="section2-subsection" id="item4">
 
                         <h2>PYTHON</h2>
 
@@ -193,7 +193,7 @@
 
                     -->
 
-                    <div class="section2-subsection" id="item5">
+                    <div id="section2-subsection" id="item5">
 
                         <h2>SNAKE</h2>
 
@@ -210,7 +210,7 @@
 
                     </div>
 
-                    <div class="section2-subsection" id="item6">
+                    <div id="section2-subsection" id="item6">
 
                         <h2>SPACESHIP</h2>
 
@@ -227,7 +227,7 @@
 
                     </div>
 
-                    <div class="section2-subsection" id="item7">
+                    <div id="section2-subsection" id="item7">
 
                         <h2>PHP</h2>
 
@@ -245,7 +245,7 @@
                     
                     </div>
 
-                    <div class="section2-subsection" id="item8">
+                    <div id="section2-subsection" id="item8">
 
                         <h2>TASKS</h2>
 
@@ -266,7 +266,7 @@
 
                     </div>
 
-                    <div class="section2-subsection" id="item9">
+                    <div id="section2-subsection" id="item9">
 
                         <h2>GALLERY</h2>
 
