Reorganize elements in section1

--- a/index.html
+++ b/index.html
@@ -60,7 +60,23 @@
 
                     <p>Desarrollador con experiencia en una amplia gama de tecnologías. Desde bases de datos como SQL hasta lenguajes de programación como Python, PHP, y Java, incluyendo el desarrollo con Spring Boot. Además, tengo experiencia en herramientas de front-end como HTML5, CSS3, Javascript, y el Framework Angular.</p>
 
-                    <p>Mi formación incluye un Grado de Educación Infantil, un Ciclo de Grado Superior en Administración de Sistemas en Red y un Bootcamp de Programación. A pesar de que mi carrera profesional está en sus primeras etapas, destaco también mi enfoque autodidacta y mi capacidad para adaptarme rápidamente a nuevas tecnologías.</p>
+                    <div class="technologies-img-container">
+
+                        <img src="assets/img/sql.png" alt="sql"/>
+                        <img src="assets/img/html-5.png" alt="html-5"/>
+                        <img src="assets/img/css.png" alt="css"/>
+                        <img src="assets/img/js.png" alt="js"/>
+                        <img src="assets/img/typescript.png" alt="ts"/>
+                        <img src="assets/img/php.png" alt="php"/>
+                        <img src="assets/img/python.png" alt="python"/>
+                        <img src="assets/img/java.png" alt="java"/>
+                        <img src="assets/img/spring-boot.png" alt="spring-boot"/>
+                        <img src="assets/img/thymeleaf.png" alt="thymeleaf"/>
+                        <img src="assets/img/angular.png" alt="angular"/>
+
+                    </div>
+
+                    <p>Mi formación incluye un Grado de Educación Infantil, un Ciclo de Grado Superior en Administración de Sistemas en Red y un Bootcamp de Programación. A pesar de que mi carrera profesional está en sus primeras etapas, destaco también mi enfoque autodidacta y mi capacidad para adaptarme rápidamente a nuevas tecnologías. </p>
 
                     <p>Mi objetivo es contribuir con mi experiencia a proyectos desafiantes y continuar aprendiendo y mejorando mis habilidades en el campo del desarrollo de software y/o web.</p>
 
