--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 
                     </div>
 
-                    <p>Mi formación incluye un Grado de Educación Infantil, un Ciclo de Grado Superior en Administración de Sistemas en Red y un Bootcamp de Programación. A pesar de que mi carrera profesional está en sus primeras etapas, destaco también mi enfoque autodidacta y mi capacidad para adaptarme rápidamente a nuevas tecnologías. </p>
+                    <p>A día de hoy, mi objetivo es contribuir con mi experiencia a proyectos desafiantes y continuar aprendiendo y mejorando mis habilidades en el campo del desarrollo de software o web. Mi formación incluye un Grado de Educación Infantil, un Ciclo de Grado Superior en Administración de Sistemas en Red y un Bootcamp de Programación.</p>
 
-                    <p>Mi objetivo es contribuir con mi experiencia a proyectos desafiantes y continuar aprendiendo y mejorando mis habilidades en el campo del desarrollo de software y/o web.</p>
+                    <p> A pesar de que mi carrera profesional está en sus primeras etapas, destaco mi enfoque autodidacta y mi capacidad para adaptarme rápidamente a nuevas tecnologías. </p>
 
                     <div class="download"> 
 
