add junit logo in technologies section

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                         <img src="assets/img/php.png" alt="php"/>
                         <img src="assets/img/python.png" alt="python"/>
                         <img src="assets/img/java.png" alt="java"/>
+                        <img src="assets/img/junit-5.png" alt="junit-5"/>
                         <img src="assets/img/spring-boot.png" alt="spring-boot"/>
                         <img src="assets/img/thymeleaf.png" alt="thymeleaf"/>
                         <img src="assets/img/angular.png" alt="angular"/>
