add dispel animation

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,300;1,100&display=swap" rel="stylesheet">
 
-        <title>Briefcase</title>
+        <title>Diego Rodríguez</title>
 
     </head>
 
@@ -138,7 +138,7 @@
 
                             <div class="repository">
 
-                                <p>Repositorio (Backend)</p>
+                                <p class="dispel">Repositorio (Backend)</p>
 
                                 <a href="https://github.com/drodriguez98/cd-appmazing-backend" target="_blank"><img src="assets/img/github.png" class="contact-link-img" alt="github"/></a>
 
@@ -146,7 +146,7 @@
 
                             <div class="repository">
 
-                                <p>Repositorio (Frontend)</p>
+                                <p class="dispel">Repositorio (Frontend)</p>
 
                                 <a href="https://github.com/drodriguez98/cd-appmazing-frontend" target="_blank"><img src="assets/img/github.png" class="contact-link-img" alt="github"/></a>
 
@@ -182,7 +182,7 @@
 
                             <div class="repository">
 
-                                <p>Repositorio</p>
+                                <p class="dispel">Repositorio</p>
                             
                                 <a href="https://github.com/drodriguez98/drb-fundme" target="_blank"><img src="assets/img/github.png" class="contact-link-img" alt="github"/></a> 
 
@@ -232,7 +232,7 @@
 
                             <div class="repository">
 
-                                <p>Repositorio</p>
+                                <p class="dispel">Repositorio</p>
 
                                 <a href="https://github.com/drodriguez98/drb-snake" target="_blank"><img src="assets/img/github.png" class="contact-link-img" alt="github"/></a>
 
@@ -258,7 +258,7 @@
 
                             <div class="repository">
 
-                                <p>Repositorio</p>
+                                <p class="dispel">Repositorio</p>
 
                                 <a href="https://github.com/drodriguez98/drb-spaceship" target="_blank"><img src="assets/img/github.png" class="contact-link-img" alt="github"/></a>
 
@@ -308,7 +308,7 @@
 
                             <div class="repository">
 
-                                <p>Repositorio</p>
+                                <p class="dispel">Repositorio</p>
 
                                 <a href="https://github.com/drodriguez98/asir-app-tasks" target="_blank"><img src="assets/img/github.png" class="contact-link-img" alt="github"/></a>
 
@@ -341,7 +341,7 @@
 
                             <div class="repository">
 
-                                <p>Repositorio</p>
+                                <p class="dispel">Repositorio</p>
 
                                 <a href="https://github.com/drodriguez98/asir-app-gallery" target="_blank"><img src="assets/img/github.png" class="contact-link-img" alt="github"/></a>
 
