fix errors in text

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 
                     <div id="section2-subsection" id="item1">
 
-                        <h2>SPRING BOOT & ANGULAR PROJECTS</h2>
+                        <h2>SPRING BOOT & ANGULAR</h2>
 
                             <p>Los siguientes dos proyectos comparten similitudes al estar desarrollados con Java utilizando Spring Boot para el backend y Angular o Thymeleaf para el frontend, ofreciendo diversas funcionalidades y permitiendo a los usuarios interactuar de manera diversa.</p>
 
