--- a/index.html
+++ b/index.html
@@ -337,7 +337,44 @@
 
                     <div class="section2-subsection" id="section2-subsection8">
 
-                        <h2 data-i18n="section2-item8-h2">TASKS</h2>
+                        <h2 data-i18n="section2-item8-h2">SHOP</h2>
+
+                        <div class="technologies-img-container">
+
+                            <img src="assets/img/sql.png" alt="sql"/>
+                            <img src="assets/img/html-5.png" alt="html-5"/>
+                            <img src="assets/img/css.png" alt="css"/>
+                            <img src="assets/img/php.png" alt="php"/>
+                            <img src="assets/img/bootstrap.png" alt="bootstrap"/>
+                            
+                        </div>
+
+                        <div class="project-img-container"> <img src="assets/img/shop-dashboard-1.png"> </div> 
+                        <div class="project-img-container"> <img src="assets/img/shop-dashboard-2.png"> </div> 
+                        <div class="project-img-container"> <img src="assets/img/shop-products.png"> </div> 
+                        <div class="project-img-container"> <img src="assets/img/shop-productdetails.png"> </div> 
+                        <div class="project-img-container"> <img src="assets/img/shop-carrito.png"> </div> 
+                        <div class="project-img-container"> <img src="assets/img/shop-mispedidos.png"> </div> 
+                        <div class="project-img-container"> <img src="assets/img/shop-detallespedido.png"> </div> 
+                        <div class="project-img-container"> <img src="assets/img/shop-userprofile.png"> </div> 
+
+                        <div class="repository-link">
+
+                            <div class="repository">
+
+                                <a href="https://github.com/drodriguez98/asir-app-shop" target="_blank"><img src="assets/img/github.png" class="contact-link-img" alt="github"/></a>
+
+                                <p class="dispel" data-i18n="section2-item8-p">Repositorio</p>
+
+                            </div>
+
+                        </div>
+                    
+                    </div>
+
+                    <div class="section2-subsection" id="section2-subsection9">
+
+                        <h2 data-i18n="section2-item9-h2">TASKS</h2>
 
                         <div class="technologies-img-container">
 
@@ -357,7 +394,7 @@
 
                                 <a href="https://github.com/drodriguez98/asir-app-tasks" target="_blank"><img src="assets/img/github.png" class="contact-link-img" alt="github"/></a>
 
-                                <p class="dispel" data-i18n="section2-item8-p">Repositorio</p>
+                                <p class="dispel" data-i18n="section2-item9-p">Repositorio</p>
 
                             </div>
 
@@ -365,9 +402,9 @@
 
                     </div>
 
-                    <div class="section2-subsection" id="section2-subsection9">
+                    <div class="section2-subsection" id="section2-subsection10">
 
-                        <h2 data-i18n="section2-item9-h2">GALLERY</h2>
+                        <h2 data-i18n="section2-item10-h2">GALLERY</h2>
 
                         <div class="technologies-img-container">
 
@@ -390,7 +427,7 @@
 
                                 <a href="https://github.com/drodriguez98/asir-app-gallery" target="_blank"><img src="assets/img/github.png" class="contact-link-img" alt="github"/></a>
 
-                                <p class="dispel" data-i18n="section2-item9-p">Repositorio</p>
+                                <p class="dispel" data-i18n="section2-item10-p">Repositorio</p>
 
                             </div>
 
